--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML> 
 <html>
 <title> Page d'accueil </title>
-<header><a href ="https://esprit.tn/"> ●Accueil</a>  <a href ="https://esprit.tn/"> ●Projets</a> <a href ="https://esprit.tn/"> ●Services</a> <a href ="solo\inscription.html"> ●Inscription</a>   	<br> <img src="C:\Users\MSI\Desktop\Solo\assets\img.jpg"> </header>
+<header><a href ="https://esprit.tn/"> ●Accueil</a>  <a href ="https://esprit.tn/"> ●Projets</a> <a href ="https://esprit.tn/"> ●Services</a> <a href ="solo\inscription.html"> ●Inscription</a>   	<br> <img src="assets/img.jpg"> </header>
 <section> 
 <h1>A propos</h1>
 <body>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
@@ -16,15 +16,15 @@ deserunt mollit anim id est laborum.</body>
 <table>
 <tr>
 <td>
-<img src="C:\Users\MSI\Desktop\Solo\assets\img_1.jpg""    alt="image" height="500"
+<img src="assets/img_1.jpg"    alt="image" height="500"
 width="600">
 </td>
 <td>
-<img src="C:\Users\MSI\Desktop\Solo\assets\img_2.png"  alt="image" height="500"
+<img src="assets/img_2.png"  alt="image" height="500"
 width="600">
 </td>
 <td>
-<img src="C:\Users\MSI\Desktop\Solo\assets\img_3.png"  alt="image" height="500"
+<img src="assets/img_3.png"  alt="image" height="500"
 width="600">
 </td>
 </tr>
